# LANDA

./: .gitignore  README.md  resolve.py  setup.ps1  start_admin.ps1  start_backend.ps1  start_flutter_web.ps1
.claude/: settings.local.json
.kiro/specs/plan/: .config.kiro  design-mvp-refined.md  requirements.md  tasks.md
admin_website/: index.html  login.html
admin_website/js/: api.js  auth.js  reports.js
ai_models/: __init__.py  pyproject.toml
ai_models/models/: __init__.py  dummy_model.py
ai_models/services/: __init__.py  inference.py
backend_fastapi/: requirements.txt
backend_fastapi/app/: main.py  scheduler.py
backend_fastapi/app/core/: config.py
backend_fastapi/app/db/: admin.py  devices.py  family.py  preparedness.py  reports.py  supabase_client.py  warnings.py
backend_fastapi/app/schemas/: alert.py  family.py  preparedness.py  report.py  warning.py
backend_fastapi/app/services/: ai_analysis.py  met_malaysia.py  notifications.py  sms_service.py  twilio_service.py
backend_fastapi/migrations/: 001_new_tables.sql  002_mvp_schema.sql  003_add_linked_topic_id.sql  003_media_ai.sql  004_family_links.sql  004_sms_reply_tracking.sql
backend_fastapi/scripts/: seed_risk_map.py  seed_warnings.py
docs/: supabase_migrations.sql  supabase_migrations_v2.sql
frontend_flutter/disaster_resilience_ai/: README.md  pubspec.yaml
frontend_flutter/disaster_resilience_ai/lib/: main.dart
frontend_flutter/disaster_resilience_ai/test/: widget_test.dart
frontend_flutter/disaster_resilience_ai/web/: flutter_bootstrap.js  index.html  manifest.json
(+55 files in other folders)
