[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_models"
version = "0.1.0"
description = "ML models for disaster resilience risk prediction"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
]

[tool.setuptools]
packages = ["ai_models", "ai_models.models", "ai_models.services"]

[tool.setuptools.package-dir]
ai_models = "."
